Globalisation de code

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 - Update MonCompte Design
 - Passer une commande - valider le panier (Par Anthony)
+- Plusieurs réservations une fois que le vol de la réservation en cours est terminé
