--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 - Update MonCompte Design
 - Passer une commande - valider le panier (Par Anthony)
 - Plusieurs réservations une fois que le vol de la réservation en cours est terminé
+- Problème d'affichage des vols (réserver)
