--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,2 @@
-- Update MonCompte Design
+﻿- Update MonCompte Design
 - Passer une commande - valider le panier (Par Anthony)
-- Plusieurs réservations une fois que le vol de la réservation en cours est terminé
-- Problème d'affichage des vols (réserver)
-- Classe Produit deprecated
