--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 ﻿- Update MonCompte Design
 - Passer une commande - valider le panier (Par Anthony)
+- Si un vol n'a plus de place, l'indiquer sur la liste des vols
