Mise à jour affichage, finalisation valider panier (problème connexion réinitialisée)

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,2 @@
-- Update MonCompte Design
-
-- Passer une commande - valider le panier (Par Anthony)
-- Réduction par rapport aux points
+- Passer une commande - valider le panier (Par Anthony) - PAS TERMINÉ
+- Réduction par rapport aux points - DONE
