Peaufinage application des réductions liées aux points, bug fixes etc

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
-- Passer une commande - valider le panier (Par Anthony) - PAS TERMINÉ
-- Réduction par rapport aux points - DONE
+- Test unitaire classes
+- Peaufiner certaines pages et faire des tests fonctionnelles
